--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
         rel="stylesheet">
-    <title>poorab patel</title>
+    <title>ashishayush</title>
 </head>
 <body>
-    git status
-    
+    <div class="top-container">
+        <img src="cloud.png" class="cloud-1" alt="">
+        <h1 class="title">I'm ashishsayush.</h1>
+        <h2 class="title">I'm a android designer</h2>
+        <img src="mountain.png" alt="" class="mountain">
+        <img src="cloud.png" class="cloud-2" alt="">
+      </div>
 </body>
